<resources>
    <string name="app_name">Dream Taxi</string>
    <string name="start_address">Начальный адрес: %s</string>
    <string name="end_address">Конечный адрес: %s</string>
    <string name="back_arrow_text">Назад</string>
    <string name="route">Маршрут:</string>
    <string name="date_and_time">Дата и время:</string>
    <string name="cost_title">Стоимость поездки:</string>
    <string name="driver_info_title">Информация о водителе:</string>
</resources>